# EduSphere

./: .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  AUTH_ANALYSIS_REPORT.md  BACKEND_IMPLEMENTATION_REPORT.md  CODEBASE_ANALYSIS.md  COOLIFY_DEPLOYMENT.md  COOLIFY_PRODUCTION_ENV.txt  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile  EduSphere-Analysis-Report.docx  FINAL_DELIVERY_SUMMARY.md  GRADING_ENHANCEMENT_PLAN.md  IMPLEMENTATION_SUMMARY.md  MODULE_VERIFICATION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_2_README.md  PHASE_2_SUMMARY.md  PROJECT_STATUS.md  QUERY_OPTIMIZATION_GUIDE.md  README.md  SCALABILITY_PLAN.md  TESTING_DOCUMENTATION.md  build_errors.txt  build_errors_filtered.txt  build_log.txt  build_result.txt  build_result2.txt  build_result3.txt  build_result4.txt  build_verify.txt  docker-compose.local.yml  docker-compose.yaml  docker-compose.yml  documentation.md  enhancement_plan.md  (+29 more)
backend/: .dockerignore  .env.example  .flake8  Dockerfile  analyze_modules.py  audit_final_log.txt  audit_fix_schools.py  audit_modules.py  audit_modules_robust.py  audit_output.txt  audit_output_v2.txt  audit_payments_standalone.py  audit_result.txt  check_all_users.py  check_db.py  check_demo_data.py  check_demo_requests.py  check_demo_user.py  check_email_config.py  check_log.txt  check_out.txt  check_output.txt  check_plans_endpoint.py  check_schools_patterns.py  check_session.py  check_user.py  check_users.py  create_admin.py  create_demo_template.py  create_template_shell.py  create_test_data.py  debug_auth.py  (+85 more)
(+625 files in other folders)
