[project]
name = "edusphere-backend"
version = "0.1.0"
description = "EduSphere School Management Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "djangorestframework-simplejwt>=5.3.0",
    "psycopg[binary]>=3.1.0",
    "dj-database-url>=2.1.0",
    "django-storages>=1.14.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
    "drf-spectacular>=0.27.0",
    "drf-spectacular-sidecar>=2023.12.1",
    "django-redis>=5.4.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "google-generativeai>=0.8.0",
    "reportlab>=4.1.0",
]

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
known_django = ["django", "rest_framework"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["*/migrations/*", "venv/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
